VERIFICANDO SE APARECE RETORNO DE MANUTENÇÃO OS INPUTS

--- a/index.html
+++ b/index.html
@@ -1366,7 +1366,7 @@ function gerarMensagem1() {
   const obs = document.getElementById("obs").value;
 
   const msg =
-`${causa.toUpperCase().includes('RETORNO') ? 'RETORNO DE MANUTENÇÃO' : 'MANUTENÇÃO'}
+`${tipo.toUpperCase()}
 🧑‍💻 Atendente: ${atendente}
 👱 Cliente: ${name}
 📍 Localização: ${loc}
