--- a/index.html
+++ b/index.html
@@ -180,18 +180,18 @@
         <h2 style="margin:0 0 8px 0;">Mensagens Prontas</h2>
         <div class="botoes-grid">
           <!-- Buttons that open & copy the message immediately -->
-          <button class="btn-inicio" onclick="scrollToCard('msg3_card','texto3')">Início de Atendimento</button>
-          <button class="btn-fim" onclick="scrollToCard('msg4_card','texto4')">Final de Atendimento</button>
+          <button class="btn-inicio" onclick="scrollToCard('msg3_card','texto3')">Iniciar Atendimento</button>
+          <button class="btn-fim" onclick="scrollToCard('msg4_card','texto4')">Finalizar Atendimento</button>
           <button class="btn-avaliacao" onclick="scrollToCard('msg10_card','texto10')">Avaliação do Google</button>
-          <button class="btn-dados" onclick="scrollToCard('msg21_card','texto21')">PEDIR CONFIRMAÇÃO DE DADOS</button>
-          <button class="btn-acao" onclick="scrollToCard('msg19_card','texto19')">AÇÕES VARIADAS</button>
-          <button class="btn-rompida" onclick="scrollToCard('msg8_card','texto8')">Rompimento Massivo</button>
-          <button class="btn-tecnicos" onclick="scrollToCard('msg11_card','texto11')">HORÁRIO DOS TÉCNICOS</button>
-          <button class="btn-falha" onclick="scrollToCard('msg9_card','texto9')">Falta de Comunicação</button>
-          <button class="btn-rompida" onclick="scrollToCard('msg31_card','texto31')">TEM LUZ VERMELHA ?</button>
-          <button class="btn-financeiro" onclick="scrollToCard('msg13_card','texto13')">COBRANÇA TAXA VISITA R$40</button>
-          <button class="btn-teste" onclick="scrollToCard('msg14_card','texto14')">TESTE DE VELOCIDADE</button>
-          <button class="btn-tv" onclick="scrollToCard('msg5_card','texto5')">TV Box</button>
+          <button class="btn-dados" onclick="scrollToCard('msg21_card','texto21')">Confirmar Endereço|Dados</button>
+          <button class="btn-acao" onclick="scrollToCard('msg19_card','texto19')">Tirar da Tomada Roteador</button>
+          <button class="btn-rompida" onclick="scrollToCard('msg8_card','texto8')">Informar Rompimento Massivo</button>
+          <button class="btn-tecnicos" onclick="scrollToCard('msg11_card','texto11')">Informar Agendamento</button>
+          <button class="btn-falha" onclick="scrollToCard('msg9_card','texto9')">Encerrar por Falta de Interação</button>
+          <button class="btn-rompida" onclick="scrollToCard('msg31_card','texto31')">Analisar LOSS no Roteador</button>
+          <button class="btn-financeiro" onclick="scrollToCard('msg13_card','texto13')">Cobrar Taxa de Visita R$40,00</button>
+          <button class="btn-teste" onclick="scrollToCard('msg14_card','texto14')">Testar Velocidade</button>
+          <button class="btn-tv" onclick="scrollToCard('msg5_card','texto5')">Sugerir Cabo ao TVBOX</button>
           <button class="btn-lentidao" onclick="scrollToCard('msg6_card','texto6')">LENTIDÃO REDE 5G</button>
           <button class="btn-lentidao" onclick="scrollToCard('msg15_card','texto15')">LENTIDÃO INVESTIGAÇÃO</button>
           <button class="btn-lentidao" onclick="scrollToCard('msg36_card','texto36')">LENTIDÃO TV</button>
