Melhorando Titulos de Buttons

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <button class="btn-inicio" onclick="scrollToCard('msg3_card','texto3')">Iniciar Atendimento</button>
           <button class="btn-fim" onclick="scrollToCard('msg4_card','texto4')">Finalizar Atendimento</button>
           <button class="btn-avaliacao" onclick="scrollToCard('msg10_card','texto10')">Avaliação do Google</button>
-          <button class="btn-dados" onclick="scrollToCard('msg21_card','texto21')">Confirmar Endereço|Dados</button>
+          <button class="btn-dados" onclick="scrollToCard('msg21_card','texto21')">Confirmar Endereço | Dados</button>
           <button class="btn-acao" onclick="scrollToCard('msg19_card','texto19')">Tirar da Tomada Roteador</button>
           <button class="btn-rompida" onclick="scrollToCard('msg8_card','texto8')">Informar Rompimento Massivo</button>
           <button class="btn-tecnicos" onclick="scrollToCard('msg11_card','texto11')">Informar Agendamento</button>
@@ -192,30 +192,30 @@
           <button class="btn-financeiro" onclick="scrollToCard('msg13_card','texto13')">Cobrar Taxa de Visita R$40,00</button>
           <button class="btn-teste" onclick="scrollToCard('msg14_card','texto14')">Testar Velocidade</button>
           <button class="btn-tv" onclick="scrollToCard('msg5_card','texto5')">Sugerir Cabo ao TVBOX</button>
-          <button class="btn-lentidao" onclick="scrollToCard('msg6_card','texto6')">LENTIDÃO REDE 5G</button>
-          <button class="btn-lentidao" onclick="scrollToCard('msg15_card','texto15')">LENTIDÃO INVESTIGAÇÃO</button>
-          <button class="btn-lentidao" onclick="scrollToCard('msg36_card','texto36')">LENTIDÃO TV</button>
-          <button class="btn-tv" onclick="scrollToCard('msg7_card','texto7')">TV/CELULAR NÃO PEGA 5G</button>
-          <button class="btn-lentidao" onclick="scrollToCard('msg16_card','texto16')">LENTIDÃO NO PC</button>
-          <button class="btn-lentidao" onclick="scrollToCard('msg17_card','texto17')">INÍCIO AÇÕES LENTIDÃO</button>
-          <button class="btn-lentidao" onclick="scrollToCard('msg18_card','texto18')">FIM AÇÕES LENTIDÃO</button>
-          <button class="btn-informativo" onclick="scrollToCard('msg20_card','texto20')">EXPLICAÇÃO CAT6 / VELOCIDADE</button>
-          <button class="btn-rompida" onclick="scrollToCard('msg22_card','texto22')">LOSS | FIBRA ROMPIDA</button>
-          <button class="btn-rompida" onclick="scrollToCard('msg23_card','texto23')">LOSS COM MASSIVO</button>
-          <button class="btn-rompida" onclick="scrollToCard('msg24_card','texto24')">PON PISCANDO</button>
-          <button class="btn-tv" onclick="scrollToCard('msg25_card','texto25')">TESTE TVBOX / YT</button>
-          <button class="btn-inicio" onclick="scrollToCard('msg26_card','texto26')">EXPEDIENTE FINDANDO</button>
-          <button class="btn-dados" onclick="scrollToCard('msg27_card','texto27')">CLIENTE SOLICITA SENHA</button>
-          <button class="btn-financeiro" onclick="scrollToCard('msg28_card','texto28')">CONTRATAÇÃO IP FIXO</button>
-          <button class="btn-alerta" onclick="scrollToCard('msg29_card','texto29')">ENCERRAMENTO (BAIXO CALÃO)</button>
-          <button class="btn-avaliacao" onclick="scrollToCard('msg30_card','texto30')">GRATIDÃO AVALIAÇÃO</button>
+          <button class="btn-lentidao" onclick="scrollToCard('msg6_card','texto6')">Investigar Onde Ocorre Lentidão</button>
+          <button class="btn-lentidao" onclick="scrollToCard('msg15_card','texto15')">Analisar Lentidão</button>
+          <button class="btn-lentidao" onclick="scrollToCard('msg36_card','texto36')">Analisar Lentidão na TV</button>
+          <button class="btn-tv" onclick="scrollToCard('msg7_card','texto7')">TV/CELULAR não pega 5G</button>
+          <button class="btn-lentidao" onclick="scrollToCard('msg16_card','texto16')">Investigar Lentidão no PC</button>
+          <button class="btn-lentidao" onclick="scrollToCard('msg17_card','texto17')">Iniciar Ações de Lentidão</button>
+          <button class="btn-lentidao" onclick="scrollToCard('msg18_card','texto18')">Finalizar Ações de Lentidão</button>
+          <button class="btn-informativo" onclick="scrollToCard('msg20_card','texto20')">Explicar Como Verificar Velocidade Contratada</button>
+          <button class="btn-rompida" onclick="scrollToCard('msg22_card','texto22')">Explicar Sinal LOSS</button>
+          <button class="btn-rompida" onclick="scrollToCard('msg23_card','texto23')">ALTERAR AQUI</button>
+          <button class="btn-rompida" onclick="scrollToCard('msg24_card','texto24')">Explicar luz PON piscando</button>
+          <button class="btn-tv" onclick="scrollToCard('msg25_card','texto25')">Testar YT no celular em caso de TVBOX</button>
+          <button class="btn-inicio" onclick="scrollToCard('msg26_card','texto26')">Expediente Findou</button>
+          <button class="btn-dados" onclick="scrollToCard('msg27_card','texto27')">Enviar ao Cliente que quer senha do ROTEADOR</button>
+          <button class="btn-financeiro" onclick="scrollToCard('msg28_card','texto28')">Cliente que quer contratar IP FIXO</button>
+          <button class="btn-alerta" onclick="scrollToCard('msg29_card','texto29')">Encerrar por palavras de baixo calão)</button>
+          <button class="btn-avaliacao" onclick="scrollToCard('msg30_card','texto30')">Agradecer Cliente Avaliação Google</button>
           <button class="btn-acao" onclick="scrollToCard('msg12_card','texto12')">Desculpas Alto Fluxo</button>
-          <button class="btn-dados" onclick="scrollToCard('msg32_card','texto32')">TROCA SENHA/REDE</button>
-          <button class="btn-dados" onclick="scrollToCard('msg33_card','texto33')">PRINT WI-FI</button>
-          <button class="btn-financeiro" onclick="scrollToCard('msg34_card','texto34')">MSG PARA CLIENTE QUE NÃO RESPONDEU S/ CONEXÃO</button>
-          <button class="btn-informativo" onclick="scrollToCard('msg35_card','texto35')">SITE MEU IP</button>
-          <button class="btn-lentidao" onclick="scrollToCard('msg37_card','texto37')">INSERIR EM LENTIDÃO</button>
-          <button class="btn-financeiro" onclick="scrollToCard('msg38_card','texto38')">LIBERAR CONEXÃO</button>
+          <button class="btn-dados" onclick="scrollToCard('msg32_card','texto32')">Confirmar Dados para Trocar SENHA</button>
+          <button class="btn-dados" onclick="scrollToCard('msg33_card','texto33')">Solicitar PRINT da redes Wi-fi</button>
+          <button class="btn-financeiro" onclick="scrollToCard('msg34_card','texto34')">Enviar MSG para cliente S/ conexão que foi agendado</button>
+          <button class="btn-informativo" onclick="scrollToCard('msg35_card','texto35')">Solicitar Print Site MeuIp</button>
+          <button class="btn-lentidao" onclick="scrollToCard('msg37_card','texto37')">Inserir em Lentidão</button>
+          <button class="btn-financeiro" onclick="scrollToCard('msg38_card','texto38')">Liberar Conexão</button>
         </div>
       </div>
 
