Alterando mesagem alterar aqui com informativo sobre massivo

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <button class="btn-lentidao" onclick="scrollToCard('msg18_card','texto18')">Finalizar Ações de Lentidão</button>
           <button class="btn-informativo" onclick="scrollToCard('msg20_card','texto20')">Explicar Como Verificar Velocidade Contratada</button>
           <button class="btn-rompida" onclick="scrollToCard('msg22_card','texto22')">Explicar Sinal LOSS</button>
-          <button class="btn-rompida" onclick="scrollToCard('msg23_card','texto23')">ALTERAR AQUI</button>
+          <button class="btn-rompida" onclick="scrollToCard('msg23_card','texto23')">Pedir para cliente aguardar, verificando rompimento massivo</button>
           <button class="btn-rompida" onclick="scrollToCard('msg24_card','texto24')">Explicar luz PON piscando</button>
           <button class="btn-tv" onclick="scrollToCard('msg25_card','texto25')">Testar YT no celular em caso de TVBOX</button>
           <button class="btn-inicio" onclick="scrollToCard('msg26_card','texto26')">Expediente Findou</button>
@@ -616,7 +616,7 @@ Peço que aguarde um momento enquanto preencho os dados e realizo o agendamento.
             </div>
           </div>
           <div class="body" id="msg23_body">
-            <textarea id="texto23" class="editable-text" readonly>Entendi, nesse caso de luz vermelha é sinal de fibra rompida, vou confirmar se não é rompimento massivo na rua/região. Se for, assim que os nossos técnicos realizarem a manutenção referente a esse rompimento, a sua conexão vai ser restabelecida. Caso contrário, preciso agendar uma visita com um técnico para identificar onde foi o rompimento.</textarea>
+            <textarea id="texto23" class="editable-text" readonly>Só um momento, por gentileza. No momento, estamos aguardando a verificação técnica para confirmar se houve um rompimento massivo na região, com múltiplos clientes sem conexão devido ao rompimento da fibra. O setor especializado já está analisando a situação e, assim que tivermos uma atualização oficial, retornarei imediatamente com as informações.</textarea>
           </div>
         </div>
 
