--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     --sidebar-bg:#0d1b2a;
     --sidebar-accent:#00aaff;
     --main-bg:#f0f8ff;
-    --card-bg:#fff;
+    --card-bg:#fff;Mensagem copiada!
     --blue:#007acc;
     --blue-dark:#005f99;
   }
@@ -1176,7 +1176,6 @@ function fallbackCopy(ta){
   ta.select();
   try{
     document.execCommand('copy');
-    alert('Mensagem copiada!');
   }catch(e){ alert('Não foi possível copiar'); }
 }
 function editarMensagem(textareaId){
