--- a/index.html
+++ b/index.html
@@ -667,8 +667,8 @@ Peço que aguarde um momento enquanto preencho os dados e realizo o agendamento.
             </div>
           </div>
           <div class="body" id="msg25_body">
-            <textarea id="texto25" class="editable-text" readonly>Para verificar se a lentidão está realmente no seu TV Box, sugerimos realizar o seguinte teste:
-No exato momento em que notar a lentidão no TV Box, abra o YouTube em seu celular, conectado na mesma rede Wi-Fi.
+            <textarea id="texto25" class="editable-text" readonly>Para verificar se a lentidão está realmente no seu TV BOX ou IPTV, sugerimos realizar o seguinte teste:
+No exato momento em que notar a lentidão no TV Box / IPTV, abra o YouTube em seu celular, conectado na mesma rede Wi-Fi.
 Se o YouTube funcionar normalmente no celular, o problema está restrito ao TV Box/IPTV.
 
 Como informado anteriormente, não prestamos suporte técnico para TV Box/IPTV, pois esse tipo de equipamento não é homologado pela Anatel.</textarea>
