--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
           <button class="btn-informativo" onclick="scrollToCard('msg35_card','texto35')">Solicitar Print Site MeuIp</button>
           <button class="btn-lentidao" onclick="scrollToCard('msg37_card','texto37')">Inserir em Lentidão</button>
           <button class="btn-financeiro" onclick="scrollToCard('msg38_card','texto38')">Liberar Conexão</button>
-          <button class="btn-financeiro" onclick="scrollToCard('msg39_card','texto39')">Analisar Se Roteador Liga</button>
-          <button class="btn-financeiro" onclick="scrollToCard('msg40_card','texto40')">Informar agendamento Sem Cliente Responder</button>
-          <button class="btn-financeiro" onclick="scrollToCard('msg41_card','texto41')">Enviar mensagem para Inverter Pontas ONU/Roteador</button>
-          <button class="btn-financeiro" onclick="scrollToCard('msg42_card','texto42')">Explicar sobre Infra 48h</button>
-          <button class="btn-financeiro" onclick="scrollToCard('msg43_card','texto43')">Explicar sobre Diferenças rede 2.4G e 5G</button>
+          <button class="btn-rompida" onclick="scrollToCard('msg39_card','texto39')">Analisar Se Roteador Liga</button>
+          <button class="btn-tecnicos" onclick="scrollToCard('msg40_card','texto40')">Informar agendamento Sem Cliente Responder</button>
+          <button class="btn-rompida" onclick="scrollToCard('msg41_card','texto41')">Enviar mensagem para Inverter Pontas ONU/Roteador</button>
+          <button class="btn-tecnicos" onclick="scrollToCard('msg42_card','texto42')">Explicar sobre Infra 48h</button>
+          <button class="btn-tv" onclick="scrollToCard('msg43_card','texto43')">Explicar sobre Diferenças rede 2.4G e 5G</button>
           
         </div>
       </div>
