--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <div class="tab" data-target="agendamentos" onclick="openTab(event)">⏱ Agendamentos sem monitoramento</div>
     <div class="tab" data-target="setor_encaminhamento" onclick="openTab(event)">🔍Consulta Rápida - Setor de Encaminhamento</div>
     <div class="tab" data-target="report_telefonia" onclick="openTab(event)">📡 Reporte Telefonia</div>
-    <div class="tab" data-target="report_n2" onclick="openTab(event)">🛠 Reporte N2</div>
+    <div class="tab" data-target="report_n2" onclick="openTab(event)">🛠 Reporte N2.</div>
 
   </aside>
 
