--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@ Inclusive pedido evidências de lentidão ao cliente como testes de velocidade e
         <!-- msg38 -->
         <div class="msg-card" id="msg38_card">
           <div class="header" onclick="toggleCardBody('msg38')">
-            <h3>Liberar Conexão</h3>
+            <h3>Liberar Conexão.</h3>
             <div class="controls">
               <button onclick="event.stopPropagation(); copiarTexto('texto38')">Copiar</button>
               <button onclick="event.stopPropagation(); editarMensagem('texto38')">Editar</button>
