--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           <button class="btn-lentidao" onclick="scrollToCard('msg6_card','texto6')">Investigar Onde Ocorre Lentidão</button>
           <button class="btn-lentidao" onclick="scrollToCard('msg15_card','texto15')">Analisar Lentidão</button>
           <button class="btn-lentidao" onclick="scrollToCard('msg36_card','texto36')">Analisar Lentidão na TV</button>
-          <button class="btn-tv" onclick="scrollToCard('msg7_card','texto7')">TV/CELULAR não pega 5G</button>
+          <button class="btn-tv" onclick="scrollToCard('msg7_card','texto7')">TV/CELULAR não pega 5G.</button>
           <button class="btn-lentidao" onclick="scrollToCard('msg16_card','texto16')">Investigar Lentidão no PC</button>
           <button class="btn-lentidao" onclick="scrollToCard('msg17_card','texto17')">Iniciar Ações de Lentidão</button>
           <button class="btn-lentidao" onclick="scrollToCard('msg18_card','texto18')">Finalizar Ações de Lentidão</button>
