--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <div class="tab" data-target="agendamentos" onclick="openTab(event)">⏱ Agendamentos sem monitoramento</div>
     <div class="tab" data-target="setor_encaminhamento" onclick="openTab(event)">🔍Consulta Rápida - Setor de Encaminhamento</div>
     <div class="tab" data-target="report_telefonia" onclick="openTab(event)">📡 Reporte Telefonia</div>
-    <div class="tab" data-target="report_n2" onclick="openTab(event)">🛠 Reporte N2.</div>
+    <div class="tab" data-target="report_n2" onclick="openTab(event)">🛠 Reporte N2</div>
 
   </aside>
 
@@ -1087,7 +1087,7 @@ As redes Wi-Fi 2.4GHz e 5GHz possuem características diferentes:
             <label>⚙️ Tratativas realizadas:</label>
             <textarea id="tratativas" placeholder="Descreva as tratativas"></textarea>
             <label>👷 Atendente:</label>
-            <input type="text" id="atendente" value="FERNANDO">
+            <input type="text" id="atendente" placeholder="Digite o nome do atendente">
             <button type="button" onclick="gerarMensagem2()">Gerar e Copiar</button>
           </form>
           <div class="result-box" id="result_report2" style="display:none;"></div>
@@ -1247,7 +1247,7 @@ As redes Wi-Fi 2.4GHz e 5GHz possuem características diferentes:
 
         <!-- 🟨 COLUNA 3 -->
         <div class="coluna">
-          <div class="consulta-item"><span class="consulta-setor">COBRANÇA</span><p>CONTRATO VERMELHO (MAIS DE 15 DIAS) OU BLOQUEADO</p></div>
+          <div class="consulta-item"><span class="consulta-setor">COBRANÇA</span><p>CONTRATO VERMELHO OU BLOQUEADO</p></div>
           <div class="consulta-item"><span class="consulta-setor">CANCELAMENTO (TELEFONE)</span><p>SOLICITAÇÃO OU INFORMAÇÕES SOBRE CANCELAMENTO</p></div>
           <div class="consulta-item"><span class="consulta-setor">CANCELAMENTO</span><p>TROCA DE TITULARIDADE</p></div>
           <div class="consulta-item"><span class="consulta-setor">VENDAS - UPGRADE</span><p>ALTERAÇÃO DE PLANO (AUMENTO DE VELOCIDADE/VALOR)</p></div>
