--- a/index.html
+++ b/index.html
@@ -1615,8 +1615,7 @@ As redes Wi-Fi 2.4GHz e 5GHz possuem características diferentes:
                     </div>
                     <div class="consulta-item"><span class="consulta-setor">MONITORAMENTO MUDANÇA DE ENDEREÇO</span>
                       <p>Segunda á sexta: 08:00 ás 22:00<br>Sábado: 08:00 ás 20:00<br>Domingo: 08:00 ás 18:00</p>
-                    </div>
-                    
+                    </div>                    
 
                   </div>
                 </div>
@@ -1625,7 +1624,7 @@ As redes Wi-Fi 2.4GHz e 5GHz possuem características diferentes:
             </div>
         </section>
 
-        <section id="setor_mensagens" class="content" style="display:none;">
+         <section id="setor_mensagens" class="content" style="display:none;">
           <div class="card">
             <div class="consulta-container">
               <h2>MODELOS DE MENSAGENS – SUPORTE ONITEL</h2>
@@ -1664,14 +1663,6 @@ As redes Wi-Fi 2.4GHz e 5GHz possuem características diferentes:
 
 
                   <div class="consulta-item">
-                    <span class="consulta-setor">WIFI</span>
-                    <p>
-                      Cliente informou que o Wi-Fi não estava aparecendo. Verificado que estava desativado. Foi ativado
-                      e o cliente informou que foi normalizado.
-                    </p>
-                  </div>
-
-                  <div class="consulta-item">
                     <span class="consulta-setor">CANCELAMENTO</span>
                     <p>
                       Cliente entrou em contato solicitando cancelamento. Foi oferecido suporte, porém não aceitou.
@@ -1684,6 +1675,20 @@ As redes Wi-Fi 2.4GHz e 5GHz possuem características diferentes:
                     <p>
                       Foi verificado a falta de conexão do cliente e ele não respondeu mais, logo foi necessário
                       realizar um agendamento de uma visita técnica para resolver o problema.
+                    </p>
+                  </div>
+                  <div class="consulta-item">
+                    <span class="consulta-setor">INFORMAR PRECISA REAGENDAR AO CLIENTE</span>
+                    <p>
+                      Olá! 😊
+                      Verifiquei aqui e o técnico esteve no local, porém não conseguiu contato no momento da visita.
+
+                      Para que possamos dar continuidade ao atendimento, será necessário reagendar uma nova visita
+                      técnica.
+                      Caso esteja de acordo, por gentileza confirme para que eu possa solicitar a vaga de agendamento.
+
+                      Assim que confirmado, seguimos com o reagendamento e informamos a nova data.
+                      Fico no aguardo da sua confirmação.
                     </p>
                   </div>
 
@@ -1742,6 +1747,23 @@ As redes Wi-Fi 2.4GHz e 5GHz possuem características diferentes:
                     </p>
                   </div>
 
+                  <div class="consulta-item">
+                    <span class="consulta-setor">INFORMAR AGENDMAENTO ABERTO AO CLIENTE</span>
+                    <p>
+                      Olá! 😊
+                      Verifiquei aqui para você e sua visita técnica está aberta para HOJE [ ]. O técnico ainda não
+                      chegou, mas fique tranquilo(a).
+
+                      No momento, o técnico encontra-se em rota de atendimento, realizando as manutenções.
+                      Sua visita técnica está na fila de atendimentos e será realizada assim que o técnico concluir os
+                      chamados anteriores.
+
+                      Pedimos, por gentileza, que aguarde e fique atento(a) à chegada do técnico.
+                      Nossa equipe entrará em contato caso o técnico esteja no local.
+
+                      Ficamos à disposição para o que precisar. Obrigado pela compreensão!
+                    </p>
+                  </div>
 
                 </div>
 
@@ -1756,6 +1778,15 @@ As redes Wi-Fi 2.4GHz e 5GHz possuem características diferentes:
                       conexão normalizou!
                     </p>
                   </div>
+
+                  <div class="consulta-item">
+                    <span class="consulta-setor">WIFI</span>
+                    <p>
+                      Cliente informou que o Wi-Fi não estava aparecendo. Verificado que estava desativado. Foi ativado
+                      e o cliente informou que foi normalizado.
+                    </p>
+                  </div>
+                  
                   <div class="consulta-item">
                     <span class="consulta-setor">FIBRA / LOS</span>
                     <p>
@@ -1789,7 +1820,6 @@ As redes Wi-Fi 2.4GHz e 5GHz possuem características diferentes:
                       Por favor, conecte-se a rede wi-fi resetada com a senha que vem padrão embaixo do roteador, depois
                       abra seu navegador e digite: 192.168.1.1 ou 192.168.0.1 precisamos abrir o roteador para acessar
                       ele e conseguirmos configurar.
-
                     </p>
                   </div>
 
